# jackson

./: LICENSE  README.md  make.ps1  pyproject.toml
.github/workflows/: dependency-review.yaml  python-ci.yaml
docs/source/: changelog.rst  conf.py  index.rst
scipts/: jackson.service
src/jackson/: __init__.py  __main__.py  jackson.py
tests/: test_smoke.py
